delete all airacs button added

--- a/main.resx
+++ b/main.resx
@@ -328,6 +328,15 @@
         xAkTJ0ycsF9x7i+XXGie568zzXNjjM/94viDuNARZtu2tzOLNTdNPzNNVPSGbxqLAAAAAElFTkSuQmCC
 </value>
   </data>
+  <data name="clearesfolderbtn.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAAGcAAAAaCAYAAACq/ULmAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAACOSURBVGhD7dqxDYAwDABBVzTpmSejZRQ2gc0Ao0iRkKDN
+        F2/pulT+0gkHPntEvTVh1J7midOOiFMM2aOnGXG2ZTlbKZok9/8ZJx/UddUkuX/jQBkHzDhgxgEzDphx
+        wIwDZhww44AZB8w4YMYBMw6YccCMA2YcMOOA/cbxTD3X75laDO84fo1iGV+jHOJEXOXJttATi1S3AAAA
+        AElFTkSuQmCC
+</value>
+  </data>
   <data name="$this.Icon" type="System.Drawing.Icon, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         AAABAAEAAAAAAAEAIAALLgAAFgAAAIlQTkcNChoKAAAADUlIRFIAAAEAAAABAAgGAAAAXHKoZgAAAAFv
